index.html files

--- a/index.html
+++ b/index.html
@@ -5,10 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emergency-Hotline | Home</title>
     <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
 <body>
     <head>
+     <!-- Navbar -->
+  <nav class="navbar">
+    <div class="logo">
+      <img src="./assets/logo.png" alt="Logo">
+      <span>Emergency<br>Service</span>
+    </div>
+    <div class="nav-right">
+      <div><i class="fa-solid fa-heart"></i> <span id="heartCount">0</span></div>
+      <div><i class="fa-solid fa-coins"></i> <span id="coinCount">100</span></div>
+      <div><button class="copy-btn"></i> Copy</button></i> <span id="copyCount">0</span></div>
+    </div>
+  </nav>
+
+  <!-- Hero -->
+  <section class="hero">
+    <img src="./assets/logo-dark.png" class="hero-logo" alt="Logo">
+    <h1>Emergency Service Directory</h1>
+    <p>Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+  </section>
 
     </head>
     <main>
