index.html file

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 </head>
 <body>
-    <head>
+    <header>
      <!-- Navbar -->
   <nav class="navbar">
     <div class="logo">
       <img src="./assets/logo.png" alt="Logo">
-      <span>Emergency<br>Service</span>
+      <h2>Emergency<br>Service</h2>
     </div>
     <div class="nav-right">
       <div><i class="fa-solid fa-heart"></i> <span id="heartCount">0</span></div>
@@ -30,9 +30,32 @@
     <h1>Emergency Service Directory</h1>
     <p>Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
   </section>
-
-    </head>
+    </header>
     <main>
+        <!-- Main Section -->
+  <main class="main-section">
+    <!-- Cards -->
+    <div class="cards">
+
+      <!-- Card 1 -->
+      <div class="card">
+        <div class="card-header">         
+         <div class="badge"><img src="./assets/emergency.png" alt=""></div>
+          <span class="heart-icon"><i class="fa-regular fa-heart"></i></span>
+        </div>
+        <h3>National Emergency Number</h3>
+        <span>National Emergency</span>
+        <p>999</p>
+        <span class="badge">All</span>
+        <div class="card-buttons">
+          <button class="copy-btn"><i class="fa-solid fa-copy"></i> Copy</button>
+          <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+        </div>
+      </div>
+
+      
+
+
 
     </main>
     <footer>
