inedx.html files

--- a/index.html
+++ b/index.html
@@ -53,6 +53,127 @@
         </div>
       </div>
 
+      <div class="card">
+        <div class="card-header">         
+         <div class="badge"><img src="./assets/police.png" alt=""></div>
+          <span class="heart-icon"><i class="fa-regular fa-heart"></i></span>
+        </div>
+        <h3>Police Helpline Number</h3>
+        <span>Police</span>
+        <p>999</p>
+        <span class="badge">All</span>
+        <div class="card-buttons">
+          <button class="copy-btn"><i class="fa-solid fa-copy"></i> Copy</button>
+          <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">         
+         <div class="badge"><img src="./assets/fire-service.png" alt=""></div>
+          <span class="heart-icon"><i class="fa-regular fa-heart"></i></span>
+        </div>
+        <h3>Fire Service Number</h3>
+        <span>Fire Service</span>
+        <p>999</p>
+        <span class="badge">All</span>
+        <div class="card-buttons">
+          <button class="copy-btn"><i class="fa-solid fa-copy"></i> Copy</button>
+          <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">         
+         <div class="badge"><img src="./assets/ambulance.png" alt=""></div>
+          <span class="heart-icon"><i class="fa-regular fa-heart"></i></span>
+        </div>
+        <h3>Ambulance Service</h3>
+        <span>Ambulance</span>
+        <p>999</p>
+        <span class="badge">All</span>
+        <div class="card-buttons">
+          <button class="copy-btn"><i class="fa-solid fa-copy"></i> Copy</button>
+          <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">         
+         <div class="badge"><img src="./assets/emergency.png" alt=""></div>
+          <span class="heart-icon"><i class="fa-regular fa-heart"></i></span>
+        </div>
+        <h3>Women & Child Helpline</h3>
+        <span>Women & Child Helpline</span>
+        <p>999</p>
+        <span class="badge">All</span>
+        <div class="card-buttons">
+          <button class="copy-btn"><i class="fa-solid fa-copy"></i> Copy</button>
+          <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">         
+         <div class="badge"><img src="./assets/emergency.png" alt=""></div>
+          <span class="heart-icon"><i class="fa-regular fa-heart"></i></span>
+        </div>
+        <h3>Anti-Corruption Helpline</h3>
+        <span>Anti-Corruption</span>
+        <p>999</p>
+        <span class="badge">All</span>
+        <div class="card-buttons">
+          <button class="copy-btn"><i class="fa-solid fa-copy"></i> Copy</button>
+          <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">         
+         <div class="badge"><img src="./assets/emergency.png" alt=""></div>
+          <span class="heart-icon"><i class="fa-regular fa-heart"></i></span>
+        </div>
+        <h3>Electricity Helpline</h3>
+        <span>Electricity</span>
+        <p>999</p>
+        <span class="badge">All</span>
+        <div class="card-buttons">
+          <button class="copy-btn"><i class="fa-solid fa-copy"></i> Copy</button>
+          <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">         
+         <div class="badge"><img src="./assets/brac.png" alt=""></div>
+          <span class="heart-icon"><i class="fa-regular fa-heart"></i></span>
+        </div>
+        <h3>Brac Helpline</h3>
+        <span>Brac</span>
+        <p>999</p>
+        <span class="badge">All</span>
+        <div class="card-buttons">
+          <button class="copy-btn"><i class="fa-solid fa-copy"></i> Copy</button>
+          <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">         
+         <div class="badge"><img src="./assets/Bangladesh-Railway.png" alt=""></div>
+          <span class="heart-icon"><i class="fa-regular fa-heart"></i></span>
+        </div>
+        <h3>Bangladesh Railway Helpline </h3>
+        <span>Bangladesh Railway</span>
+        <p>999</p>
+        <span class="badge">All</span>
+        <div class="card-buttons">
+          <button class="copy-btn"><i class="fa-solid fa-copy"></i> Copy</button>
+          <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+        </div>
+      </div>
+
+
       
 
 
